first commit for detail_front

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  align-items: center;
+  /* min-width: 540px; */
+  background-color: var(--pale-grey);
+  font-family: Pretendard;
+}
+@media (max-width: 750px) {
+  body {
+    min-width: 720px;
+    font-family: Pretendard;
+    width: fit-content;
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
