--- a/src/index.css
+++ b/src/index.css
@@ -337,6 +337,49 @@ code {
   text-align: right;
   color: #e8340c;
 }
+.Text_Style_35 {
+  font-family: Noto Sans CJK KR;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 49px;
+  letter-spacing: -1px;
+  text-align: left;
+}
+.Text_Style_36 {
+  font-family: Noto Sans CJK KR;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: -0.699999988079071px;
+  text-align: center;
+}
+/* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */ /* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */ /* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */
+/* .Text_Style_22 {
+
+} */
 /* .Text_Style_22 {
 
 } */
