--- a/src/index.css
+++ b/src/index.css
@@ -170,9 +170,17 @@ body {
   background-color: var(--pale-grey);
   font-family: Noto Sans;
 }
-@media (max-width: 750px) {
+@media (max-width: 1920px) {
   body {
-    min-width: 720px;
+    min-width: 1440px;
+    font-family: Noto Sans;
+    width: fit-content;
+  }
+}
+
+@media (min-width: 1920px) {
+  body {
+    min-width: 1920px;
     font-family: Noto Sans;
     width: fit-content;
   }
