--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,10 @@ body {
   font-family: Noto Sans;
 }
 @media (max-width: 1920px) {
+
   body {
     min-width: 1440px;
+    /* max-width: 100vw; */
     font-family: Noto Sans;
     width: fit-content;
   }
@@ -181,8 +183,10 @@ body {
 @media (min-width: 1920px) {
   body {
     min-width: 1920px;
+    /* max-width: 100vw; */
     font-family: Noto Sans;
     width: fit-content;
+    /* overflow-x: hidden; */
   }
 }
 
