--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -170,11 +171,12 @@ body {
   background-color: var(--pale-grey);
   font-family: Noto Sans;
 }
+
 @media (max-width: 1920px) {
 
   body {
-    min-width: 1440px;
-    /* max-width: 100vw; */
+    /* min-width: 1440px; */
+    max-width: 100vw;
     font-family: Noto Sans;
     width: fit-content;
   }
@@ -182,11 +184,11 @@ body {
 
 @media (min-width: 1920px) {
   body {
-    min-width: 1920px;
-    /* max-width: 100vw; */
+    /* min-width: 1920px; */
+    max-width: 100vw;
     font-family: Noto Sans;
     width: fit-content;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
   }
 }
 
