--- a/src/index.css
+++ b/src/index.css
@@ -560,3 +560,54 @@ code {
 /* .Text_Style_22 {
 
 } */
+
+/* ------------------------------------------------ 개별 스타일링 - 유화경 2022.01.19 ~ */
+
+/* 다운로드 페이지 버튼 반응형 */
+.mobileButton {
+  width: 160px;
+  height: 52px;
+  font-family: Spoqa Han Sans Neo, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  border-radius: 5px;
+  color: #FFFFFF;
+  margin: 0 10px 0 0;
+  background-color: #FF3D21;
+}
+
+.mobileLeft {
+  width: 160px;
+  margin: 0 10px 0 0;
+}
+.mobileRight {
+  width: 160px;
+}
+
+.mobileLnb {
+  width: 20px;
+  color: #ffffff;
+}
+
+@media (max-width: 767px) {
+  .mobileButton{
+    width: 100%;
+    height: 44px;
+  }
+  .mobileLeft {
+    width: 48%;
+    float: left;
+    margin: 0;
+  }
+  .mobileRight {
+    width: 48%;
+    float: right;
+  }
+
+  .mobileLnb {
+    width: 0;
+    color: transparent;
+  }
+}
